# samexporter

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  convert_all_meta_sam.sh  convert_all_meta_sam2.sh  convert_all_models.sh  convert_mobile_sam.sh  convert_sam3.sh  download_all_models.sh  infer_mobile_sam.sh  infer_sam.sh  infer_sam2.sh  infer_sam3.sh  pyproject.toml  requirements.txt  setup.py  test_all_models.sh  test_comprehensive.sh
.github/workflows/: python-publish.yml
images/: plants_box.json  plants_point.json  plants_prompt1.json  plants_prompt2.json  plants_text.json  truck_prompt.json  truck_prompt_2.json  truck_sam3.json  truck_sam3_box.json  truck_sam3_point.json
samexporter/: export_decoder.py  export_encoder.py  export_encoder2.py  export_sam2.py  export_sam3.py  inference.py  onnx_utils.py  sam2_onnx.py  sam3_onnx.py  sam_onnx.py
samexporter/mobile_encoder/: setup_mobile_sam.py  tiny_vit_sam.py
tests/: test_onnx_utils.py  test_sam3_onnx.py  test_sam_variants.py
