[tool.black]
line-length = 79
#include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "samexporter"
version = "0.4.2"
description = "Exporting Segment Anything models ONNX format"
authors = [
    {name = "Viet Anh Nguyen", email = "vietanh.dev@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "onnx==1.20.1",
    "onnxruntime==1.24.2",
    "opencv-python==4.11.0.86",
    "segment-anything==1.0",
    "torch==2.10.0",
    "torchvision==0.25.0",
    "timm==0.9.2",
    "onnxsim==0.5.0",
    "numpy==1.26.4",
    "onnxscript==0.6.2",
]

[project.urls]
"Homepage" = "https://github.com/vietanhdev/samexporter"
"Bug Tracker" = "https://github.com/vietanhdev/samexporter/issues"

[project.optional-dependencies]
dev = ["flake8", "isort", "black", "pre-commit"]

[tool.setuptools]
packages = ["samexporter"]

[tool.setuptools.package-data]
"samexporter.sam2_configs" = ["*.py", "*.yaml"]
