[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "samexporter"
version = "0.4.4"
description = "Exporting Segment Anything models ONNX format"
authors = [
    {name = "Viet Anh Nguyen", email = "vietanh.dev@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "onnx==1.20.1",
    "onnxruntime==1.24.2",
    "opencv-python==4.11.0.86",
    "segment-anything==1.0",
    "torch==2.10.0",
    "torchvision==0.25.0",
    "timm==0.9.2",
    "onnxsim==0.5.0",
    "numpy==1.26.4",
    "onnxscript==0.6.2",
    "osam",  # CLIP tokeniser for SAM3 text prompts
]

[project.urls]
"Homepage" = "https://github.com/vietanhdev/samexporter"
"Bug Tracker" = "https://github.com/vietanhdev/samexporter/issues"

[project.optional-dependencies]
dev = ["ruff", "pre-commit"]

[tool.setuptools]
packages = ["samexporter"]

[tool.setuptools.package-data]
"samexporter.sam2_configs" = ["*.py", "*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [".git", "__pycache__", "build", "dist", "*.egg-info", "sam3"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]
ignore = [
    "E501",  # line too long
    "E741",  # ambiguous variable name
    "UP006", "UP007",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401", "F811"]
